<resources>
    <string name="app_name">ReRead</string>
    <string name="title_billing_details">Billing details</string>
    <string name="title_full_name">Full Name:</string>
    <string name="title_phone_number">Phone Number:</string>
    <string name="title_address">Address:</string>
    <string name="title_delivery_mode">Delivery Mode:</string>
    <string name="title_self_pick">Self-pick</string>
    <string name="title_doordash">DoorDash</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_cod">COD</string>
    <string name="tile_internet_banking">Internet Banking</string>
    <string name="title_product">Product</string>
    <string name="title_subtotal">Subtotal</string>
    <string name="title_delivery_fee">Delivery Fee</string>
    <string name="title_voucher">Voucher</string>
    <string name="title_type_voucher">Type Your Voucher</string>
    <string name="title_total">Total</string>
    <string name="title_btn_place_order">Place Order</string>
    <string name="title_total_1">Total:</string>
    <string name="title_saved">Saved:</string>
    <string name="title_my_wishlist_name">My Wishlish Name</string>
    <string name="title_select_all">Select All</string>
    <string name="title_add_too_cart">Add too Cart</string>
    <string name="title_change_password">Change Your Password</string>
    <string name="title_old_password">Old Password</string>
    <string name="title_new_password">New Password</string>
    <string name="title_re_enter_password">Re-enter New Password</string>
    <string name="title_register">Register</string>
    <string name="title_btn_create_wishlist">Create a Wishlist</string>
    <string name="title_wishlish_you_may_like">Wishlist you may like</string>
    <string name="title_shipping_fee">Shipping fee</string>
    <string name="title_go_to_checkout">Go to Checkout</string>
    <string name="title_cart">Cart</string>
    <string name="title_email">Email</string>
    <string name="title_gender">Gender</string>
    <string name="title_dob">Date of Birth</string>
    <string name="title_order_history">Order History</string>
    <string name="title_interested_events">Interested Events</string>
    <string name="title_top30_read">Top 30 Must Read In 2025</string>
    <string name="title_quick_payment_via_qr_code">Quick Payment Via QR Code</string>
    <string name="title_or">Or</string>
    <string name="title_bank_name">Bank Name:</string>
    <string name="title_account_name">Account Name:</string>
    <string name="title_account_number">Account Number:</string>
    <string name="title_amount">Amount:</string>
    <string name="title_price">Price</string>
</resources>